--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -322,7 +322,7 @@
 		<div layout="row" layout-align="center center" style="overflow: hidden;">
 			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow: hidden;">
 				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%; padding: 16px;" layout="row" layout-align="start center">
-					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA Blog</span><md-datepicker ng-model="blog_filter" md-placeholder="Enter date"></md-datepicker>
+					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA's Latest News</span>
 				</div>
 				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
 					<div style="position: absolute; top: 0; left: 0; width: 100%; padding-bottom: 80px; padding-top: 16px;">
@@ -347,10 +347,10 @@
 								</md-card-actions>
 							</md-card>
 							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
-								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+								<img ng-cloak src="media/_imh5525.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST ONE</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST TWO</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -369,7 +369,7 @@
 								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 								<md-card-header>
 									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST ONE</span>
+										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST THREE</span>
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
@@ -380,8 +380,8 @@
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
+									<p>Melissa</p>
+									<md-button disabled>{{Date.now()}}</md-button>
 								</md-card-actions>
 							</md-card>
 						</div>
