--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -342,8 +342,8 @@
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
+									<p>Melissa</p>
+									<md-button disabled>{{date_one | date:"MM/dd/yyyy"}}</md-button>
 								</md-card-actions>
 							</md-card>
 							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
@@ -361,8 +361,8 @@
 									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
 							            <md-icon>share</md-icon>
 							        </md-button>
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
+									<p>Melissa</p>
+									<md-button disabled>{{date_two | date:"MM/dd/yyyy"}}</md-button>
 								</md-card-actions>
 							</md-card>
 							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
@@ -381,7 +381,7 @@
 							            <md-icon>share</md-icon>
 							        </md-button>
 									<p>Melissa</p>
-									<md-button disabled>{{Date.now()}}</md-button>
+									<md-button disabled>{{date_three | date:"MM/dd/yyyy"}}</md-button>
 								</md-card-actions>
 							</md-card>
 						</div>
