--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -187,7 +187,7 @@
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
-									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BOOMING ENTERTAINMENT DISTRICTS</span>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
