--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -136,7 +136,7 @@
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
-						<md-divider ng-show="$index > 3"></md-divider>
+						<md-divider style="width: 100%;" ng-show="$index < 3"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%;">
