--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -1,6 +1,7 @@
 <style>
 	md-menu-item {min-height: 48px;}
 	.border-left {border-left: 1px solid #e0e0e0;}
+	.border-right {border-right: 1px solid #e0e0e0;}
 </style>
 <div ng-include src="'application/global/style.html'"></div>
 <md-content class="page" style="height: {{window_height}}px">
@@ -136,8 +137,8 @@
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
-						<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+						<md-divider style="width: 100%;" ng-show="$index > 3"></md-divider>
+							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3, 'border-right': $index == 4}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
@@ -147,8 +148,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button style="color: {{primary_hue_normal.value}}; background-color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{primary_hue_normal.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
