--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -146,7 +146,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
 	                    					</md-button>
