--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -174,7 +174,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
+									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
 								</md-card-content>
 								<md-card-actions layout="row" layout-align="start center">
 									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
@@ -193,7 +193,7 @@
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
-								<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 							</md-card-content>
 						</md-card>
 					</div>
@@ -206,7 +206,7 @@
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
-								<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 							</md-card-content>
 						</md-card>
 					</div>
@@ -232,7 +232,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{primary_hue_normal.value}};">local_play</md-icon>
 	                    					</md-button>
@@ -247,7 +247,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">local_dining</md-icon>
 	                    					</md-button>
@@ -264,7 +264,7 @@
 										</md-card-header-text>
 									</md-card-header>
 									<md-card-content>
-										<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+										<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 									</md-card-content>
 								</md-card>
 								<md-card style="background: #fafafa; height: 100%;">
@@ -274,7 +274,7 @@
 										</md-card-header-text>
 									</md-card-header>
 									<md-card-content>
-										<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+										<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 									</md-card-content>
 								</md-card>
 							</div>
@@ -302,7 +302,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
@@ -321,7 +321,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
@@ -340,7 +340,7 @@
 									</md-card-header-text>
 								</md-card-header>
 								<md-card-content>
-									<p style="color: {{base_hue_darkest.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 								</md-card-content>
 								<md-divider></md-divider>
 								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
