--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -232,7 +232,7 @@
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
-											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
 											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{primary_hue_normal.value}};">local_play</md-icon>
 	                    					</md-button>
