slideshow overlay removal, our services update

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -135,14 +135,16 @@
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
-						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
-						<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
+						
+
+						<div layout-padding flex="33">
+							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
-												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
@@ -155,6 +157,92 @@
 								</div>
 							</div>
 						</div>
+
+
+						<div layout-padding flex="33">
+							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
+							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+								<div flex layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+								</div>
+							</div>
+						</div>
+
+						<div layout-padding flex="33">
+							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
+							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+								<div flex layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+								</div>
+							</div>
+						</div>
+
+						<div layout-padding flex="33">
+							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
+							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+								<div flex layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+								</div>
+							</div>
+						</div>
+
+						<div layout-padding flex="33">
+							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
+							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+								<div flex layout="column" layout-align="center center">
+									<md-card style="background: #fafafa; height: 100%;">
+										<md-card-header>
+											<md-card-header-text>
+												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
+											</md-card-header-text>
+										</md-card-header>
+										<md-card-content>
+											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    					</md-button>
+										</md-card-content>
+									</md-card>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</md-card>
