--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -141,11 +141,11 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
+									<md-card style="background: #fafafa; height: 100%; text-align: center">
 										<
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/005-compass.svg">
+												<img ng-src="media/005-compass.svg" style="max-width: 64px">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -168,6 +168,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<img ng-src="media/003-plant.svg" style="max-width: 64px">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -189,6 +190,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<img ng-src="media/004-whiteboard.svg" style="max-width: 64px">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -210,6 +212,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<img ng-src="media/002-tripod.svg" style="max-width: 64px">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -231,6 +234,7 @@
 									<md-card style="background: #fafafa; height: 100%;">
 										<md-card-header>
 											<md-card-header-text>
+												<img ng-src="media/001-travel.svg" style="max-width: 64px">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
 											</md-card-header-text>
 										</md-card-header>
