center services content landing

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -141,11 +141,10 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%; text-align: center">
-										<
+									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/005-compass.svg" style="max-width: 64px">
+												<img ng-src="media/005-compass.svg" style="max-width: 64px; margin: 0 auto;">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -165,10 +164,10 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
+									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/003-plant.svg" style="max-width: 64px">
+												<img ng-src="media/003-plant.svg" style="max-width: 64px; margin: 0 auto;">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -187,10 +186,10 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
+									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/004-whiteboard.svg" style="max-width: 64px">
+												<img ng-src="media/004-whiteboard.svg" style="max-width: 64px; margin: 0 auto;">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -209,10 +208,10 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
+									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/002-tripod.svg" style="max-width: 64px">
+												<img ng-src="media/002-tripod.svg" style="max-width: 64px; margin: 0 auto;">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
 											</md-card-header-text>
 										</md-card-header>
@@ -231,10 +230,10 @@
 							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
-									<md-card style="background: #fafafa; height: 100%;">
+									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/001-travel.svg" style="max-width: 64px">
+												<img ng-src="media/001-travel.svg" style="max-width: 64px; margin: 0 auto;">
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
 											</md-card-header-text>
 										</md-card-header>
