--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -145,14 +145,15 @@
 										<md-card-header>
 											<md-card-header-text>
 												<img ng-src="media/005-compass.svg" style="max-width: 64px; margin: 0 auto;">
+												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+											<!-- <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    					</md-button>
+	                    					</md-button> -->
 										</md-card-content>
 									</md-card>
 								</div>
@@ -168,14 +169,15 @@
 										<md-card-header>
 											<md-card-header-text>
 												<img ng-src="media/003-plant.svg" style="max-width: 64px; margin: 0 auto;">
+												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+											<!-- <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    					</md-button>
+	                    					</md-button> -->
 										</md-card-content>
 									</md-card>
 								</div>
@@ -190,14 +192,15 @@
 										<md-card-header>
 											<md-card-header-text>
 												<img ng-src="media/004-whiteboard.svg" style="max-width: 64px; margin: 0 auto;">
+												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+											<!-- <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    					</md-button>
+	                    					</md-button> -->
 										</md-card-content>
 									</md-card>
 								</div>
@@ -212,14 +215,15 @@
 										<md-card-header>
 											<md-card-header-text>
 												<img ng-src="media/002-tripod.svg" style="max-width: 64px; margin: 0 auto;">
+												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+											<!-- <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    					</md-button>
+	                    					</md-button> -->
 										</md-card-content>
 									</md-card>
 								</div>
@@ -234,14 +238,15 @@
 										<md-card-header>
 											<md-card-header-text>
 												<img ng-src="media/001-travel.svg" style="max-width: 64px; margin: 0 auto;">
+												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
 											</md-card-header-text>
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+											<!-- <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    					</md-button>
+	                    					</md-button> -->
 										</md-card-content>
 									</md-card>
 								</div>
