--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -264,7 +264,7 @@
 			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
 				<div layout-wrap layout="row" layout-align="start center" flex>
 					<div flex>
-						<iframe src="{{iframe_src}}" width="auto" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+						<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
