--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -11,7 +11,7 @@
 			<div layout-align="center center" layout="row" layout flex>
 
 				<div flex-gt-sm="33" layout-align="center center" layout="row">
-					<img src="media/logo.png" style="max-height: 48px;">
+					<img src="media/logo.png" style="max-height: 64px;">
 				</div>
 
 				<div flex-gt-sm="66" layout-align="end center" layout="row">
@@ -262,155 +262,65 @@
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
 			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
-				<div layout-wrap layout="row" layout-align="start center" flex>
-					<div flex>
-						<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--  -->
-
-		<!--  -->
-		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
-			<md-card layout="column" layout-align="center center" style="width: 80%; z-index: 2; overflow: hidden; position: relative; background-color: {{base_hue_lightest.value}};">
-				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">HOW WE SOLVE YOUR PROBLEMS</h1>
-				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
-					<div layout-wrap layout="row" layout-align="start center">
-						<div layout-padding flex="66">
-								<div flex layout="row" layout-align="center center">
-									<md-card class="md-whiteframe-16dp" style="background: {{primary_hue_normal.value}}; height: 100%;">
-										<md-card-header>
-											<md-card-header-text>
-												<p style="font-size: 14px; color: {{base_hue_lightest.value}};">OUR STRATEGY</p>
-												<span class="md-title" style="font-size: 24px;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-												<p style="font-size: 18px; color: {{base_hue_lightest.value}};">DELIVERS</p>
-											</md-card-header-text>
-										</md-card-header>
-										<md-card-content>
-											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised md-fab" style="background-color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{primary_hue_normal.value}};">local_play</md-icon>
-	                    					</md-button>
-										</md-card-content>
-									</md-card>
-									<md-card class="md-whiteframe-4dp" style="background: #fafafa; height: 100%;">
-										<md-card-header>
-											<md-card-header-text>
-												<p style="font-size: 14px; color: {{base_hue_darkest.value}};">OUR FOCUS</p>
-												<span class="md-title" style="font-size: 24px;">GEOGRAPHIC INFORMATION SYSTEMS</span>
-												<p style="font-size: 18px;">IS UNRIVALED</p>
-											</md-card-header-text>
-										</md-card-header>
-										<md-card-content>
-											<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}};">
-	                    						<md-icon style="color: {{base_hue_lightest.value}}">local_dining</md-icon>
-	                    					</md-button>
-										</md-card-content>
-									</md-card>
-								</div>
+				<div layout-wrap layout="row" layout-align="start center" flex="80">
+					<div flex="33">
+						<div layout="column" layout-align="start center">
+							<md-card style="background: transparent; height: 100%;">
+								<md-card-header>
+									<md-card-header-text>
+										<span class="md-title" style="font-size: 24px; font-weight: bold;">WHAT ARE WE DOING?</span>
+									</md-card-header-text>
+								</md-card-header>
+								<md-card-content>
+									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
+								</md-card-content>
+								<md-card-actions layout="row" layout-align="start center">
+									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	            						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	            					</md-button>
+								</md-card-actions>
+							</md-card>
 						</div>
-						<div layout-padding flex="33">
-							<div flex layout="column" layout-align="center center">
-								<md-card style="background: #fafafa; height: 100%;">
-									<md-card-header>
-										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
-										</md-card-header-text>
-									</md-card-header>
-									<md-card-content>
-										<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-									</md-card-content>
-								</md-card>
-								<md-card style="background: #fafafa; height: 100%;">
-									<md-card-header>
-										<md-card-header-text>
-											<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GEOGRAPHIC INFORMATION SYSTEMS</span>
-										</md-card-header-text>
-									</md-card-header>
-									<md-card-content>
-										<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-									</md-card-content>
-								</md-card>
+					</div>
+					<!--  -->
+					<div layout="row" layout-align="center center" layout-wrap>
+						<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
+							<div layout-wrap layout="row" layout-align="start center" flex>
+								<div flex>
+									<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</md-card>
-		</div>
-		<!--  -->
-
-		<!--  -->
-		<div layout="row" layout-align="center center" style="overflow: hidden;">
-			<md-card layout-wrap layout="row" layout-align="center center" class="md-whiteframe-16dp" style="background: {{base_hue_lightest.value}}; width: 80%; margin-bottom: -64px; position: relative; max-height: 600px; min-height: 600px; overflow: hidden;">
-				<div class="md-whiteframe-4dp" style="background-color: #F5F5F5; z-index: 2; min-height: 80px; position: absolute; top: 0; left: 0; width: 100%; padding: 16px;" layout="row" layout-align="start center">
-					<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">MMA's Latest News</span>
-				</div>
-				<div flex="100" layout="row" layout-align="center center" style="position: relative; background-color: #fafafa; overflow-y: scroll; min-height: 520px; margin-top: 80px;">
-					<div style="position: absolute; top: 0; left: 0; width: 100%; padding-bottom: 80px; padding-top: 16px;">
-						<div layout="row" layout-align="center start" layout-wrap>
-							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
-								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
-								<md-card-header>
-									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST ONE</span>
-									</md-card-header-text>
-								</md-card-header>
-								<md-card-content>
-									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-								</md-card-content>
-								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
-							            <md-icon>share</md-icon>
-							        </md-button>
-									<p>Melissa</p>
-									<md-button disabled>{{date_one | date:"MM/dd/yyyy"}}</md-button>
-								</md-card-actions>
-							</md-card>
-							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
-								<img ng-cloak src="media/_imh5525.jpg" class="md-card-image">
-								<md-card-header>
-									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST TWO</span>
-									</md-card-header-text>
-								</md-card-header>
-								<md-card-content>
-									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-								</md-card-content>
-								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
-							            <md-icon>share</md-icon>
-							        </md-button>
-									<p>Melissa</p>
-									<md-button disabled>{{date_two | date:"MM/dd/yyyy"}}</md-button>
-								</md-card-actions>
-							</md-card>
-							<md-card class="md-whiteframe-4dp" style="background: #f5f5f5;" flex="30">
-								<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
-								<md-card-header>
-									<md-card-header-text>
-										<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BLOG POST THREE</span>
-									</md-card-header-text>
-								</md-card-header>
-								<md-card-content>
-									<p style="color: {{base_hue_darker.value}}; line-height: 24px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-								</md-card-content>
-								<md-divider></md-divider>
-								<md-card-actions layout="row" layout-align="start center" style="background-color: {{base_hue_lightest.value}}; margin: 0; padding: 16px; position: relative;">
-									<md-button class="md-fab" aria-label="Share" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; position: absolute; top: -28px; right: 32px; z-index: 1">
-							            <md-icon>share</md-icon>
-							        </md-button>
-									<p>Melissa</p>
-									<md-button disabled>{{date_three | date:"MM/dd/yyyy"}}</md-button>
-								</md-card-actions>
-							</md-card>
-						</div>
+					<!--  -->
+					<div layout-padding flex="33">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ENTERTAINMENT DISTRICTS</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+							</md-card-content>
+						</md-card>
+					</div>
+					<div layout-padding flex="33">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
+							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">COMPLEX URBAN DEVELOPMENT</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darker.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+							</md-card-content>
+						</md-card>
 					</div>
 				</div>
-			</md-card>
+			</div>
 		</div>
 		<!--  -->
 
