--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -16,7 +16,7 @@
 
 				<div flex-gt-sm="66" layout-align="end center" layout="row">
 					<md-button style="color: {{base_hue_darkest.value}};">
-						HOME
+						<md-icon style="color: {{base_hue_darkest.value}}">weekend</md-icon>HOME&nbsp;&nbsp;
 					</md-button>
 					<md-menu-bar>
 						<md-menu>
@@ -166,7 +166,7 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/003-plant.svg" style="max-width: 64px; margin: 0 auto;">
+												<md-icon md-svg-src="media/003-plant.svg" class="services-icon s64" style="margin: 0 auto;">
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
@@ -316,8 +316,8 @@
 		<div layout="row" layout-align="center center" layout-wrap>
 			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
 				<div layout-wrap layout="row" layout-align="start center" flex>
-					<div flex>
-						<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="450" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+					<div flex style="margin-bottom: -5px;">
+						<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
