--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -16,7 +16,7 @@
 
 				<div flex-gt-sm="66" layout-align="end center" layout="row">
 					<md-button style="color: {{base_hue_darkest.value}};">
-						<md-icon style="color: {{base_hue_darkest.value}}">weekend</md-icon>HOME&nbsp;&nbsp;
+						<md-icon style="color: {{base_hue_darkest.value}}">home</md-icon>&nbsp;&nbsp;home
 					</md-button>
 					<md-menu-bar>
 						<md-menu>
@@ -314,7 +314,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2; padding-top: 64px; padding-bottom: 64px;">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: #F5F5F5; z-index: 2;">
 				<div layout-wrap layout="row" layout-align="start center" flex>
 					<div flex style="margin-bottom: -5px;">
 						<iframe src="https://snazzymaps.com/embed/59273" width="auto" height="600" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
