services icon fixes

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -142,7 +142,8 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/005-compass.svg" style="max-width: 64px; margin: 0 auto;">
+												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/005-compass.svg">
+												</md-icon>
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">CIVIL ENGINEERING</span>
 											</md-card-header-text>
@@ -166,7 +167,8 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<md-icon md-svg-src="media/003-plant.svg" class="services-icon s64" style="margin: 0 auto;">
+												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/003-plant.svg">
+												</md-icon>
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">LANDSCAPE ARCHITECTURE</span>
 											</md-card-header-text>
@@ -189,7 +191,8 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/004-whiteboard.svg" style="max-width: 64px; margin: 0 auto;">
+												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/004-whiteboard.svg">
+												</md-icon>
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">PLANNING</span>
 											</md-card-header-text>
@@ -212,7 +215,8 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/002-tripod.svg" style="max-width: 64px; margin: 0 auto;">
+												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/002-tripod.svg">
+												</md-icon>
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">SURVEYING</span>
 											</md-card-header-text>
@@ -235,7 +239,8 @@
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
 											<md-card-header-text>
-												<img ng-src="media/001-travel.svg" style="max-width: 64px; margin: 0 auto;">
+												<md-icon style="width: 64px; height: 64px;" md-svg-src="media/001-travel.svg">
+												</md-icon>
 												<br><br>
 												<span class="md-title" style="font-size: 24px; color: {{base_hue_darkest.value}};">GIS</span>
 											</md-card-header-text>
