--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -18,7 +18,7 @@
 					<md-button style="color: {{base_hue_darkest.value}};">
 						<md-icon style="color: {{base_hue_darkest.value}}">home</md-icon>&nbsp;&nbsp;home
 					</md-button>
-					<md-menu-bar>
+					<md-menu-bar style="padding-left: 0;">
 						<md-menu>
 							<md-button ng-click="$mdMenu.open()" style="color: {{base_hue_darkest.value}};">
 								<md-icon style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
