--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -13,7 +13,7 @@
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
-	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px; margin: 0;">We Aspire To <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" ng-attr-text="valueStatements"></span></h1>
+	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We Aspire To <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" ng-attr-text="valueStatements"></span></h1>
 	                    <p style="color: {{base_hue_darkest.value}}; font-size: 16px;">Helping Reshape North Texas Into America's Greatest Metropolitan Area!</p>
 	                    <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
 	                    <md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;</md-button>
