--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -136,7 +136,6 @@
 						
 
 						<div layout-padding flex="33">
-							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
@@ -155,7 +154,6 @@
 
 
 						<div layout-padding flex="33">
-							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
 							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
@@ -173,8 +171,7 @@
 						</div>
 
 						<div layout-padding flex="33">
-							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
@@ -191,8 +188,7 @@
 						</div>
 
 						<div layout-padding flex="33">
-							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
@@ -209,8 +205,7 @@
 						</div>
 
 						<div layout-padding flex="33">
-							<md-divider style="width: 100%;" ng-show="$index > 2"></md-divider>
-							<div layout-wrap layout="row" layout-align="center center" ng-class="{'border-left': $index > 0 && $index != 3}">
+							<div layout-wrap layout="row" layout-align="center center">
 								<div flex layout="column" layout-align="center center">
 									<md-card style="background: #fafafa; height: 100%; text-align: center;">
 										<md-card-header>
@@ -225,7 +220,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</md-card>
