header - removed box shadow... added bottom border

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -6,7 +6,7 @@
 <md-content class="page" style="height: {{window_height}}px">
 	<section ng-cloak>
 		<!-- sticky header -->
-		<md-subheader class="md-whiteframe-4dp header" layout-align="center center" layout="row" layout flex style="z-index: 5">
+		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
 
 			<div layout-align="center center" layout="row" layout flex>
 
